# apertium-ain-jpn

./: Makefile.am  apertium-ain-jpn.ain-jpn.dix  apertium-ain-jpn.ain-jpn.t1x  configure.ac  modes.xml
.bak/: README  modes.xml
